<resources>
    <string name="app_name">TestBalina</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_photos">Photos</string>
    <string name="menu_map">Map</string>
    <string name="add_image">add image</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="login_hint">Login</string>
    <string name="log_in_button_text">Log in</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="image_details_title">Image Details</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_confirm_action">Confirm action</string>

    <string name="error_title">Something went wrong</string>
</resources>