<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_login">

    <fragment
        android:id="@+id/nav_photos"
        android:name="by.baranovdev.testbalina.ui.photos.ImagesFragment"
        android:label="@string/menu_photos"
        tools:layout="@layout/fragment_photos" >
        <action
            android:id="@+id/action_nav_photos_to_nav_image_details"
            app:destination="@id/nav_image_details" />
    </fragment>

    <fragment
        android:id="@+id/nav_map"
        android:name="by.baranovdev.testbalina.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" >
        <action
            android:id="@+id/action_nav_map_to_nav_image_details"
            app:destination="@id/nav_image_details"/>
    </fragment>
    <fragment
        android:id="@+id/nav_image_details"
        android:name="by.baranovdev.testbalina.ui.imagedetails.ImageDetailsFragment"
        android:label="@string/image_details_title"
        tools:layout="@layout/fragment_image_details">
        <argument
            android:name="imageId"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
    <fragment
        android:id="@+id/nav_login"
        android:name="by.baranovdev.testbalina.ui.login.LoginFlowFragment"
        android:label="Возьмите на работу, пожалуйста :)" >
        <action
            android:id="@+id/action_nav_login_to_nav_photos"
            app:destination="@id/nav_photos" />
    </fragment>


</navigation>